compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__argument_shadowing.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main(x: Int) {\n  fn(x: Float) {\n\n  }\n}\n"
snapshot_kind: text
---
pub fn main(x: Int) {
  fn(x: Float) {
|
  }
}


----- Completion content -----
