compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__argument_variable_shadowing.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main(x: Int) {\n  let x = [1, 2]\n\n}\n"
snapshot_kind: text
---
pub fn main(x: Int) {
  let x = [1, 2]
|
}


----- Completion content -----
