compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_a_const_annotation.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n\nconst wibble: Int = 7\n\npub fn main() {\n  let wibble: Int = 7\n}\n"
snapshot_kind: text
---
const wibble: In|t = 7

pub fn main() {
  let wibble: Int = 7
}


----- Completion content -----
