compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_a_function_arg_annotation.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn wibble(\n  _: String,\n) -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
pub fn wibble(
  _: String|,
) -> Nil {
  Nil
}


----- Completion content -----
