compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_import_from_dependency_with_docs.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "//// Main package\n//// documentation!\n\nimport gleam\n\npub fn main() {\n  0\n}"
snapshot_kind: text
---
//// Main package
//// documentation!

import gle|am

pub fn main() {
  0
}


----- Completion content -----
