compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_import_with_docs.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import gleam\n\npub fn main() {\n  0\n}"
snapshot_kind: text
---
import gle|am

pub fn main() {
  0
}


----- Completion content -----
