compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_unqualified_import.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{}\n\npub fn main() {\n  0\n}"
snapshot_kind: text
---
import dep.{|}

pub fn main() {
  0
}


----- Completion content -----
